--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: jo
+package: github.com/slavikdev/jo
 import:
 - package: gopkg.in/gin-gonic/gin.v1
 - package: github.com/stretchr/testify
